--- a/stopper/css/style.css
+++ b/stopper/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
 body{
     background-color: #000;
+    margin: 0;
+    padding: 0;
 }
 .container{
     position: absolute;
@@ -14,12 +16,15 @@ body{
     background-color: #000;
     color:greenyellow;
     border: greenyellow 1px solid;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 .stopper p{
     text-align: center;
     padding-top: 15px;
-    font-size: larger;
+    text-decoration: underline;
+}
+span{
+    font-size: xx-large
 }
 .buttons{
     margin:auto;    
@@ -28,20 +33,21 @@ body{
 }
 button{
     font-family: 'Hubballi', cursive;
-    font-size: large;
+    font-size: larger;
     color: greenyellow;
     background-color: black;
     border: 1px greenyellow solid;
     border-radius: 5px;
     text-align: center;
-    transition: padding 0.2s, background-color 0.2s, color 0.2s;
+    transition: padding 0.1s, background-color 0.1s, color 0.1s;
 }
 button:hover{
-    padding: 15px;
+    padding: 10px;
     background-color: rgba(173, 255, 50, 0.398);
     color:white;
 }
 button:active{
     background-color: white;
     color: black;
+    padding: 5px;
 }
